--- a/TitanosaurTimeline/index.html
+++ b/TitanosaurTimeline/index.html
@@ -326,7 +326,7 @@
 
 		<div class="cd-timeline-block">
 			<div class="cd-timeline-img cd-picture">
-				<img src="img/egg.png" alt="Picture">
+				<img src="img/cd-icon-picture.svg" alt="Picture">
 			</div> <!-- cd-timeline-img -->
 
 		<div class="cd-timeline-content">
@@ -338,7 +338,7 @@
 
 	<div class="cd-timeline-block">
 			<div class="cd-timeline-img cd-picture">
-				<img src="img/fossil.png" alt="Picture">
+				<img src="img/cd-icon-picture.svg" alt="Picture">
 			</div> <!-- cd-timeline-img -->
 
 		<div class="cd-timeline-content">
@@ -355,7 +355,7 @@
 
 		<div class="cd-timeline-block">
 			<div class="cd-timeline-img cd-picture">
-				<img src="img/fossil.png" alt="Picture">
+				<img src="img/cd-icon-picture.svg" alt="Picture">
 			</div> <!-- cd-timeline-img -->
 
 		<div class="cd-timeline-content">
@@ -387,7 +387,7 @@
 		
 		<div class="cd-timeline-block">
 			<div class="cd-timeline-img cd-picture">
-				<img src="img/egg.png" alt="Picture">
+				<img src="img/cd-icon-picture.svg" alt="Picture">
 			</div> <!-- cd-timeline-img -->
 	
 			<div class="cd-timeline-content">
@@ -398,7 +398,7 @@
 		</div> <!-- cd-timeline-block -->
 		<div class="cd-timeline-block">
 			<div class="cd-timeline-img cd-picture">
-				<img src="img/fossil.png" alt="Picture">
+				<img src="img/cd-icon-picture.svg" alt="Picture">
 			</div> <!-- cd-timeline-img -->
 
 		<div class="cd-timeline-content">
@@ -413,7 +413,7 @@
 
 		<div class="cd-timeline-block">
 			<div class="cd-timeline-img cd-picture">
-				<img src="img/fossil.png" alt="Picture">
+				<img src="img/cd-icon-picture.svg" alt="Picture">
 			</div> <!-- cd-timeline-img -->
 	
 			<div class="cd-timeline-content">
@@ -437,7 +437,7 @@
 
 	<div class="cd-timeline-block">
 			<div class="cd-timeline-img cd-picture">
-				<img src="img/egg.png" alt="Picture">
+				<img src="img/cd-icon-picture.svg" alt="Picture">
 			</div> <!-- cd-timeline-img -->
 
 			<div class="cd-timeline-content">
@@ -452,7 +452,7 @@
 
 		<div class="cd-timeline-block">
 			<div class="cd-timeline-img cd-picture">
-				<img src="img/egg.png" alt="Picture">
+				<img src="img/cd-icon-picture.svg" alt="Picture">
 			</div> <!-- cd-timeline-img -->
 	
 			<div class="cd-timeline-content">
