--- a/TitanosaurTimeline/index.html
+++ b/TitanosaurTimeline/index.html
@@ -54,7 +54,7 @@
 				<h2>About 270 Million Years Ago</h2>
 				<p> Pangaea formed. </p>
 				<a href="http://www.amnh.org/explore/ology/ology-cards/255-pangaea" class="cd-read-more">What is Pangaea?</a>
-				<span class="cd-date"><img src="img/pangaea.jpg" alt="Picture" class="img-responsive" width="50%" height="50%"/></span>
+				<span class="cd-date"><img src="img/pangaea.png" alt="Picture" class="img-responsive" width="50%" height="50%"/></span>
 			</div> <!-- cd-timeline-content -->
 		</div> <!-- cd-timeline-block -->
 
@@ -79,7 +79,7 @@
 				<h2> 245 to 240 Million Years Ago </h2>
 				<p> Nyasasaurus parringtoni, earliest known dinosaur to exist. </p>
 				<!--<a href="#0" class="cd-read-more">Read more</a>-->
-				<span class="cd-date"><img src="img/Nyasasaurus.png" alt="Picture" height="80%" width="100%"/></span>
+				<span class="cd-date"><img src="img/" alt="Picture" height="80%" width="100%"/></span>
 			</div> <!-- cd-timeline-content -->
 		</div> <!-- cd-timeline-block -->
 
@@ -91,7 +91,7 @@
 				<h2>About 225 Million Years Ago</h2>
 				<p> Dinosaurs and Mammals appeared.</p>
 				<a href="http://www.amnh.org/exhibitions/fighting-dinos/the-rise-of-mammals" class="cd-read-more">Read more</a>
-				<span class="cd-date"><img src="img/firstmammals.jpg" alt="Picture" height="80%" width="100%"/></span>
+				<span class="cd-date"><img src="img/dinosaurs.jpg" alt="Picture" height="80%" width="100%"/></span>
 			</div> <!-- cd-timeline-content -->
 		</div> <!-- cd-timeline-block -->
 
@@ -105,7 +105,7 @@
 				<a href="http://www.amnh.org/explore/amnh.tv/(watch)/pterosaurs-explained/what-is-a-pterosaur" class="cd-read-more">What are Pterosaurs like?</a>	
 				<br> <br> <br> </p>
 				<p style="font-size:14px;">Visit pterosaurs on the 4th floor in the <a href="http://www.amnh.org/plan-your-visit/interactive-floor-plan/(open)/17021">Hall of Vertebrate Origins</p>
-				<span class="cd-date"><img src ="img/pterosaur.jpg" alt="Picture" height="80%" width ="100%"/></span>
+				<span class="cd-date"><img src ="img/pterosaur.png" alt="Picture" height="80%" width ="100%"/></span>
 
 			</div> <!-- cd-timeline-content -->
 		</div> <!-- cd-timeline-block -->
@@ -118,7 +118,7 @@
 				<h2> 200 Million Years Ago</h2>
 				<p> Pangea separates.</p>
 				<!--<a href="#0" class="cd-read-more">Read more</a> not needed -->
-				<span class="cd-date"><img src="img/pangea.gif" alt="Picture" height="80%" width="100%"/></span>
+				<span class="cd-date"><img src="img/pangaeaseparates.gif" alt="Picture" height="80%" width="100%"/></span>
 			</div> <!-- cd-timeline-content -->
 		</div> <!-- cd-timeline-block -->
 
@@ -132,7 +132,7 @@
 				<a href="http://www.amnh.org/explore/amnh.tv/(watch)/dinosaurs-among-us/dinosaurs-among-us-opens-march-21" class="cd-read-more">Click here to watch a video about Paraves</a>
 				<br></br>
 				<p style="font-size:14px;">Learn about praves, visit the <a href="http://www.amnh.org/exhibitions/dinosaurs-among-us/">Dinosaurs Among Us</a> exhibit in the LeFrak Family Gallery on the 4th floor.</p>
-				<span class="cd-date"><img src ="img/treeofparaves.png" alt="Picture" height="70%" width="85%"/></span>
+				<span class="cd-date"><img src ="img/paraves.jpg" alt="Picture" height="70%" width="85%"/></span>
 			</div> <!-- cd-timeline-content -->
 		</div> <!-- cd-timeline-block -->
 
@@ -145,7 +145,7 @@
 				<h2> 141 Million Years Ago</h2>
 				<p> Cretaceous period. (Lasted 65.5 million years)</p>
 				<a href="http://www.amnh.org/explore/ology/ology-cards/030-cretaceous-period" class="cd-read-more">Read more about the Cretaceous time period</a>
-				<span class="cd-date"><img src="img/cretaceous.jpg" alt="Picture" height ="80%" width="100%"/></span>
+				<span class="cd-date"><img src="img/cretaceousperiod.jpg" alt="Picture" height ="80%" width="100%"/></span>
 			</div> <!-- cd-timeline-content -->
 		</div> <!-- cd-timeline-block -->
 
@@ -163,7 +163,6 @@
 				<span class="cd-date"><img src="img/trex.png" alt="Picture" height="80%" width="100%"/></span>
 			</div> <!-- cd-timeline-content -->
 
-<br></br><br></br><br></br>
 
 		<div class="cd-timeline-block"> 
 <a name="two"></a>
@@ -348,7 +347,7 @@
 				<br> <br> <br> </p>
 				<p style="font-size: 14px;">Show me the <a href="http://www.amnh.org/plan-your-visit/interactive-floor-plan/(open)/16988">Spitzer Hall of Human Origins on the first floor</a> so I can learn more about human ancentry!</p>
 
-				<span class="cd-date"><!--date--></span>
+				<span class="cd-date"><img src="img/hominidae.jpg"</span>
 			</div> <!-- cd-timeline-content -->
 		</div> <!-- cd-timeline-block -->
 
@@ -365,7 +364,7 @@
 				<!--<a href="#0" class="cd-read-more">Click to learn more about Homo Sapiens</a>
 				<br> <br> <br> </p>
 				<p style="font-size:14px">Visit the <a href="http://www.amnh.org/plan-your-visit/interactive-floor-plan/(open)/16988">Spitzer Hall of Human Origins on the first floor</a> to learn more about Homo Sapiens</p>
-				<span class="cd-date"><img src="img/earlyhomosapien.jpg" alt="Picture" height="80%" width="100%"></span>
+				<span class="cd-date"><img src="img/homosapiens.jpg" alt="Picture" height="80%" width="100%"></span>
 			</div> <!-- cd-timeline-content -->
 		</div> <!-- cd-timeline-block -->
 
