--- a/TitanosaurTimeline/index.html
+++ b/TitanosaurTimeline/index.html
@@ -167,7 +167,7 @@
 		<div class="cd-timeline-block"> 
 <a name="two"></a>
 			<div class="cd-timeline-img cd-picture">
-				<img src="img/cracked_egg.png" alt="Picture">
+				<img src="img/shell.png" alt="Picture">
 			</div>
 			<div class="cd-timeline-content">
 			<h2>75 Million Years Ago</h2>
@@ -175,7 +175,7 @@
 			<a href="http://www.amnh.org/explore/news-blogs/podcasts/toast-the-titanosaur" class="cd-read-more">Click here to learn more about the Titanosaur</a>
 			<br> <br> <br> </p>
 			<p style="font-size: 14px;">Visit the Titanosaur at the <a href="http://www.amnh.org/plan-your-visit/interactive-floor-plan/(open)/17020">Wallach Orientation Center on the 4th floor.</p>
-			<span class="cd-date"></span>
+			<span class="cd-date"><img src="img/titanest.png" alt="Picture" height="80%" width="100%"/></span>
 		</div>
 	</div>
 
