--- a/TitanosaurTimeline/index.html
+++ b/TitanosaurTimeline/index.html
@@ -167,7 +167,7 @@
 		<div class="cd-timeline-block"> 
 <a name="two"></a>
 			<div class="cd-timeline-img cd-picture">
-				<img src="img/shell.png" alt="Picture">
+				<img src="img/cracked_egg.png" alt="Picture">
 			</div>
 			<div class="cd-timeline-content">
 			<h2>75 Million Years Ago</h2>
