--- a/TitanosaurTimeline/index.html
+++ b/TitanosaurTimeline/index.html
@@ -97,7 +97,7 @@
 
 	<div class="cd-timeline-block">
 			<div class="cd-timeline-img cd-picture">
-				<img src="img/ptero.png" alt="Picture" height="100%" width="100%">
+				<img src="img/egg.png" alt="Picture" height="100%" width="100%">
 			</div> <!-- cd-timeline-img -->
 			<div class="cd-timeline-content">
 				<h2>220 to 66 Million Years Ago</h2>
