--- a/TitanosaurTimeline/index.html
+++ b/TitanosaurTimeline/index.html
@@ -90,7 +90,7 @@
 			<div class="cd-timeline-content">
 				<h2>About 225 Million Years Ago</h2>
 				<p> Dinosaurs and Mammals appeared.</p>
-				<a href="http://www.amnh.org/exhibitions/fighting-dinos/the-rise-of-mammals" class="cd-read-more">Read more</a>
+				<a href="http://www.amnh.org/exhibitions/fighting-dinos/the-rise-of-mammals" class="cd-read-more">Learn more about mammals and dinosaurs</a>
 				<span class="cd-date"><img src="img/dinosaurs.jpg" alt="Picture" height="80%" width="100%"/></span>
 			</div> <!-- cd-timeline-content -->
 		</div> <!-- cd-timeline-block -->
