--- a/TitanosaurTimeline/index.html
+++ b/TitanosaurTimeline/index.html
@@ -106,14 +106,13 @@
 				<br> <br> <br> </p>
 				<p style="font-size:14px;">Visit pterosaurs on the 4th floor in the <a href="http://www.amnh.org/plan-your-visit/interactive-floor-plan/(open)/17021">Hall of Vertebrate Origins</p>
 				<span class="cd-date"><img src ="img/pterosaur.png" alt="Picture" height="80%" width ="100%"/></span>
-
 			</div> <!-- cd-timeline-content -->
 		</div> <!-- cd-timeline-block -->
+
 		<div class="cd-timeline-block">
 			<div class="cd-timeline-img cd-picture">
 				<img src="img/egg.png" alt="Picture">
 			</div> <!-- cd-timeline-img -->
-
 			<div class="cd-timeline-content">
 				<h2> 200 Million Years Ago</h2>
 				<p> Pangea separates.</p>
@@ -393,6 +392,7 @@
 				<h2>1821-22</a></h2>
 				<p> Mary Anning discovers the world's first Plesiosaur skeleton at Lyme. </p>
 				<a href="http://www.amnh.org/explore/news-blogs/on-exhibit-posts/happy-birthday-mary-anning" class="cd-read-more"> Read more</a>
+				<span class="cd-date"><img src="img/maryanning.jpg" alt="Picture" height="80%" width="100%"/></span>
 			</div> <!-- cd-timeline-content -->
 		</div> <!-- cd-timeline-block -->
 		<div class="cd-timeline-block">
@@ -406,6 +406,7 @@
 				<a href="http://www.amnh.org/exhibitions/permanent-exhibitions/human-origins-and-cultural-halls/anne-and-bernard-spitzer-hall-of-human-origins/lucy"class="cd-read-more">Click here to learn more about Lucy</a>
 				<br> <br> <br> </p>
 				<p style="font-size:14px;">Visit Lucy at the <a href="http://www.amnh.org/plan-your-visit/interactive-floor-plan/(open)/16988">Anne and Bernard Spitzer Hall of Human Origins on the first floor.</p>
+				<span class="cd-date"><img src="img/lucy.jpg" alt="Picture" height="80%" width="100%"/></span>
 			</div> <!-- cd-timeline-content -->
 		</div> <!-- cd-timeline-block -->
 
@@ -419,6 +420,7 @@
 				<h2>1996</a></h2>
 				<p> Discovery of Sinornithosaurus. </p>
 				<a href="http://www.amnh.org/exhibitions/dinosaurs-ancient-fossils-new-discoveries/liaoning-diorama/the-liaoning-forest"class="cd-read-more">Click here to learn more about the Sinornithosaurus</a>
+				<span class="cd-date"><img src="img/Sinornithosaurus.jpg" alt="Picture" height="80%" width="100%"/></span>
 			</div> <!-- cd-timeline-content -->
 		</div> <!-- cd-timeline-block -->
 
