--- a/TitanosaurTimeline/index.html
+++ b/TitanosaurTimeline/index.html
@@ -195,7 +195,7 @@
 				<img src="img/fossil.png" alt="Picture">
 			</div> <!-- cd-timeline-img -->
 
-			<div class="cd-timeline-content" id="dino" style="background:#DEB887">
+			<div class="cd-timeline-content" id="dino">
 				<h2>Nesting</h2>
 				<p> Female titanosaurs dug holes with their hind legs and laid about 30 to 40 eggs per hole. The fertilized eggs were about 11 cm long in diameter and had bead-like scales on their skin protecting them from predators. Titanosaurs laid their eggs near active volcanoes because the added heat helped with incubation. </p>
 				<!--<a href="#0" class="cd-read-more">Read more</a>-->
