--- a/TitanosaurTimeline/index.html
+++ b/TitanosaurTimeline/index.html
@@ -109,15 +109,15 @@
 			</div> <!-- cd-timeline-content -->
 		</div> <!-- cd-timeline-block -->
 
-		<div class="cd-timeline-block">
+	<div class="cd-timeline-block">
 			<div class="cd-timeline-img cd-picture">
 				<img src="img/egg.png" alt="Picture">
 			</div> <!-- cd-timeline-img -->
 			<div class="cd-timeline-content">
-				<h2> 200 Million Years Ago</h2>
-				<p> Pangea separates.</p>
-				<!--<a href="#0" class="cd-read-more">Read more</a> not needed -->
-				<span class="cd-date"><img src="img/pangaeaseparates.gif" alt="Picture" height="80%" width="100%"/></span>
+				<h2> 200 Million Years Ago </h2>
+				<p> Pangaea separates. </p>
+				<!--<a href="#0" class="cd-read-more">Read more</a>-->
+				<span class="cd-date"> <img src="img/pangaeaseparates.gif" alt="Picture" height="80%" width="100%"/></span>
 			</div> <!-- cd-timeline-content -->
 		</div> <!-- cd-timeline-block -->
 
