--- a/TitanosaurTimeline/index.html
+++ b/TitanosaurTimeline/index.html
@@ -392,7 +392,7 @@
 			<div class="cd-timeline-content">
 				<h2>1821-22</a></h2>
 				<p> Mary Anning discovers the world's first Plesiosaur skeleton at Lyme. </p>
-				<a href="http://www.amnh.org/explore/news-blogs/on-exhibit-posts/happy-birthday-mary-anning" class="cd-read-more"> Read more</a>
+				<a href="http://www.amnh.org/explore/news-blogs/on-exhibit-posts/happy-birthday-mary-anning" class="cd-read-more"> Click to learn more about Mary Anning</a>
 			</div> <!-- cd-timeline-content -->
 		</div> <!-- cd-timeline-block -->
 		<div class="cd-timeline-block">
@@ -430,7 +430,6 @@
 			<div class="cd-timeline-content">
 				<h2>2004 </h2>
 				<p> Discovery of Tiktaalik - A transitional form between lobe-finned fish and tetrapods is discovered in Canada. </p>
-				<a href=""class="cd-read-more">Read more</a>
 			</div> <!-- cd-timeline-content -->
 		</div> <!-- cd-timeline-block -->
 
@@ -442,9 +441,9 @@
 			<div class="cd-timeline-content">
 				<h2> Spring 2014 </h2>
 				<p> The Titanosaur femur was discovered.</p>
-				<a href="http://www.amnh.org/explore/amnh.tv/(watch)/the-titanosaur/meet-the-titanosaur" class="cd-read-more">Click here to Meet the Titanosaur</a>
+				<a href="http://www.amnh.org/explore/amnh.tv/(watch)/the-titanosaur/meet-the-titanosaur" class="cd-read-more">Click to learn more about the Titanosaur</a>
 				<br> <br> <br> </p>
-				<p style="font-size:14px;">Come learn about the Titanosaur <a href="http://www.amnh.org/plan-your-visit/interactive-floor-plan/(open)/17020">Wallach Orientation Center on the 4th floor.</p><!-- <span class="cd-date">date</span>-->
+				<p style="font-size:14px;">Visit the Titanosaur at the  <a href="http://www.amnh.org/plan-your-visit/interactive-floor-plan/(open)/17020">Wallach Orientation Center on the 4th floor.</p><!-- <span class="cd-date">date</span>-->
 			</div> <!-- cd-timeline-content -->
 		</div> <!-- cd-timeline-block -->
 
@@ -457,7 +456,7 @@
 			<div class="cd-timeline-content">
 				<h2>Jan 2016 </a></h2>
 				<p> Titanosaur arrived at AMNH.</p>
-				<a href="http://www.amnh.org/explore/news-blogs/news-posts/the-titanosaur-arrives" class="cd-read-more">Read more</a>
+				<a href="http://www.amnh.org/explore/news-blogs/news-posts/the-titanosaur-arrives" class="cd-read-more">Meet the Titanosaur!</a>
 				<!--<span class="cd-date">--><!--date--><!--</span> -->
 			</div> <!-- cd-timeline-content -->
 		</div> <!-- cd-timeline-block -->
