--- a/TitanosaurTimeline/index.html
+++ b/TitanosaurTimeline/index.html
@@ -95,7 +95,7 @@
 			</div> <!-- cd-timeline-content -->
 		</div> <!-- cd-timeline-block -->
 
-	<div class="cd-timeline-block">
+		<div class="cd-timeline-block">
 			<div class="cd-timeline-img cd-picture">
 				<img src="img/egg.png" alt="Picture" height="100%" width="100%">
 			</div> <!-- cd-timeline-img -->
@@ -103,8 +103,8 @@
 				<h2>220 to 66 Million Years Ago</h2>
 				<p> Pterosaurs Existed.</p>
 				<a href="http://www.amnh.org/explore/amnh.tv/(watch)/pterosaurs-explained/what-is-a-pterosaur" class="cd-read-more">What are Pterosaurs like?</a>	
-				<br> <br> <br> </p>
-				<p style="font-size:14px;">Visit pterosaurs on the 4th floor in the <a href="http://www.amnh.org/plan-your-visit/interactive-floor-plan/(open)/17021">Hall of Vertebrate Origins</p>
+				<br> <br> <br>
+				<p style="font-size:14px;">Visit pterosaurs on the 4th floor in the <a href="http://www.amnh.org/plan-your-visit/interactive-floor-plan/(open)/17021"/>Hall of Vertebrate Origins</p>
 				<span class="cd-date"><img src ="img/pterosaur.png" alt="Picture" height="80%" width ="100%"/></span>
 			</div> <!-- cd-timeline-content -->
 		</div> <!-- cd-timeline-block -->
@@ -139,7 +139,6 @@
 			<div class="cd-timeline-img cd-picture">
 				<img src="img/egg.png" alt="Picture">
 			</div> <!-- cd-timeline-img -->
-
 			<div class="cd-timeline-content">
 				<h2> 141 Million Years Ago</h2>
 				<p> Cretaceous period. (Lasted 65.5 million years)</p>
@@ -154,13 +153,14 @@
 				<img src="img/egg.png" alt="Picture">
 			</div> <!-- cd-timeline-img -->
 		<div class="cd-timeline-content">
-				<h2>85 to 65 Million Years Ago</a></h2>
+				<h2>85 to 65 Million Years Ago</h2>
 				<p> Tyrannosaurus Rex Existed.</p>
 				<a href="http://www.amnh.org/explore/ology/ology-cards/003-tyrannosaurus-rex" class="cd-read-more">Click here for children-friendly reading on the T-Rex</a>
-				<br> <br> <br> </p>
-				<p style="font-size: 14px;">Visit the T-Rex in the <a href="http://www.amnh.org/plan-your-visit/interactive-floor-plan/(open)/17022">Hall of Saurischian Dinosaurs on the 4th floor.</p>
+				<br> <br> <br>
+				<p style="font-size: 14px;">Visit the T-Rex in the <a href="http://www.amnh.org/plan-your-visit/interactive-floor-plan/(open)/17022"/>Hall of Saurischian Dinosaurs on the 4th floor.</p>
 				<span class="cd-date"><img src="img/trex.png" alt="Picture" height="80%" width="100%"/></span>
 			</div> <!-- cd-timeline-content -->
+		</div> <!-- cd-timeline-block -->
 
 
 		<div class="cd-timeline-block"> 
@@ -172,11 +172,11 @@
 			<h2>75 Million Years Ago</h2>
 			<p>Meet the Titanosaur!</p>
 			<a href="http://www.amnh.org/explore/news-blogs/podcasts/toast-the-titanosaur" class="cd-read-more">Click here to learn more about the Titanosaur</a>
-			<br> <br> <br> </p>
-			<p style="font-size: 14px;">Visit the Titanosaur at the <a href="http://www.amnh.org/plan-your-visit/interactive-floor-plan/(open)/17020">Wallach Orientation Center on the 4th floor.</p>
+			<br> <br> <br>
+			<p style="font-size: 14px;">Visit the Titanosaur at the <a href="http://www.amnh.org/plan-your-visit/interactive-floor-plan/(open)/17020"/>Wallach Orientation Center on the 4th floor.</p>
 			<span class="cd-date"><img src="img/titanest.png" alt="Picture" height="80%" width="100%"/></span>
-		</div>
-	</div>
+		</div><!-- cd-timeline-content -->
+	</div> <!-- cd-timeline-block -->
 
 		<div class="cd-timeline-block">
 			<div class="cd-timeline-img cd-picture"><!--the color of the back of the icon in the circle-->
@@ -192,9 +192,8 @@
 
 		<div class="cd-timeline-block">
 			<div class="cd-timeline-img cd-picture">
-				<img src="img/fossil.png" alt="Picture">
+				<img src="img/fossil.png" alt="Picture"/>
 			</div> <!-- cd-timeline-img -->
-
 			<div class="cd-timeline-content" id="dino" style="background:#DEB887">
 				<h2>Nesting</h2>
 				<p> Female titanosaurs dug holes with their hind legs and laid about 30 to 40 eggs per hole. The fertilized eggs were about 11 cm long in diameter and had bead-like scales on their skin protecting them from predators. Titanosaurs laid their eggs near active volcanoes because the added heat helped with incubation. </p>
@@ -207,7 +206,6 @@
 			<div class="cd-timeline-img cd-picture">
 				<img src="img/fossil.png" alt="Picture">
 			</div> <!-- cd-timeline-img -->
-
 			<div class="cd-timeline-content" id="dino">
 				<h2>Location and Time Period</h2>
 				<p> The titanosaur (sauropods group) existed 100 to 66 million years ago during the Cretaceous era. Titanosaur fossils have been found on every continent. 
@@ -221,12 +219,10 @@
 			<div class="cd-timeline-img cd-picture">
 				<img src="img/fossil.png" alt="Picture">
 			</div> <!-- cd-timeline-img -->
-
 			<div class="cd-timeline-content" id="dino">
 				<h2>How was it found?</h2>
 				<p> The Titanosaur was found by a farmer who was looking for a lost sheep when he spotted some fossils peeking out of the ground in La Flecha, Argentina. He then contacted scientists who realized the dinosaur was different from the rest of those previously discovered.
- </p>
-				<!--<a href="#0" class="cd-read-more">Read more</a>-->
+				</p>
 				<span class="cd-date"><!--date--></span>
 				</div> <!-- cd-timeline-content -->
 		</div> <!-- cd-timeline-block -->
@@ -235,7 +231,6 @@
 			<div class="cd-timeline-img cd-picture">
 				<img src="img/fossil.png" alt="Picture">
 			</div> <!-- cd-timeline-img -->
-
 			<div class="cd-timeline-content" id="dino">
 				<h2>Physicality</h2>
 				<p> The titanosaur’s femur was 8 feet long, the largest ever found. Scientists first noted  its uniqueness because the lower end of the femur was straight as opposed to flared like that of other dinosaurs. The swing of their tail helped impulse their legs to walk and counteracted their heavy neck. The titanosaur was 20 feet tall from the ground up to its shoulder and over 3 times the size of a school bus. It weighed approximately 70 tons and evolved to walk on horseshoe-like stumps to reduce the impact walking had on the bones.</p> 
@@ -249,7 +244,6 @@
 			<div class="cd-timeline-img cd-picture">
 				<img src="img/fossil.png" alt="Picture">
 			</div> <!-- cd-timeline-img -->
-
 			<div class="cd-timeline-content" id="dino">
 				<h2>Theories Over Death</h2>
 				<p> The average titanosaur’s lifespan was 50 years. The first theory over their extinction was that because young males were usually isolated from herds at birth, they often died at a young age, leading to females not being able to reproduce. The second theory is that because there were active volcanoes in the area, titanosaurs laid their eggs in the area because of the heat the volcanoes emitted. However, when the volcanos erupted, it eradicated all vegetation, starving the, and eventually killing them.
@@ -264,14 +258,11 @@
 			<div class="cd-timeline-img cd-picture">
 				<img src="img/fossil.png" alt="Picture">
 			</div> <!-- cd-timeline-img -->
-
 			<div class="cd-timeline-content" id="dino">
 				<h2>Negative Aspect of Its Size</h2>
-				<p> The titanosaur’s large size made the flow of blood and oxygen from the heart and brain  to the rest of the body slower and harder. Its massive size and weight made the titanosaurs move slower because it took longer for nerve signals to reach the brain.
-
- </p>
+				<p> The titanosaur’s large size made the flow of blood and oxygen from the heart and brain  to the rest of the body slower and harder. Its massive size and weight made the titanosaurs move slower because it took longer for nerve signals to reach the brain.</p>
 				<!--<a href="#0" class="cd-read-more">Read more</a>-->
-				<span class="cd-date"><!--date--></span>
+				<!--<span class="cd-date"><!--date</span>-->
 				</div> <!-- cd-timeline-content -->
 		</div> <!-- cd-timeline-block -->
 
@@ -280,7 +271,6 @@
 			<div class="cd-timeline-img cd-picture">
 				<img src="img/fossil.png" alt="Picture">
 			</div> <!-- cd-timeline-img -->
-
 			<div class="cd-timeline-content" id="dino">
 				<h2>Positive Aspect of Its Size</h2>
 				<p> The titanosaur’s large size deterred any potential predators from attacking. Its long neck allowed it to have greater access to vegetation in tall trees.
@@ -295,7 +285,6 @@
 			<div class="cd-timeline-img cd-picture">
 				<img src="img/fossil.png" alt="Picture">
 			</div> <!-- cd-timeline-img -->
-
 			<div class="cd-timeline-content" id="dino">
 				<h2>Exhibit</h2>
 				<p> The exhibit at the Museum of Natural History was inaugurated in January of 2016 and is on exhibit on the fourth floor. The titanosaur is too big for its hall, therefore its head is poking out warmly welcoming guests to the hall. 
@@ -311,41 +300,36 @@
 			<div class="cd-timeline-img cd-picture">
 				<img src="img/cd-icon-picture.svg" alt="Picture">
 			</div> <!-- cd-timeline-img -->
-
-			<div class="cd-timeline-content" id="dino">
+			<div class="cd-timeline-block" id="dino">
 				<h2>Additional Info</h2>
 				<p> It took scientists two weeks to put all of the casts together and get them ready for the exhibit. Over the two years it took to dig up the 223 bones, these paleontologists transformed the knowledge of dinosaurs.
  				</p>
- 				<a href="http://www.amnh.org/explore/amnh.tv/(watch)/the-titanosaur/how-to-build-a-titanosaur" class="cd-read-more">Click to learn more about building the titanosaur</a>
-				<!--<a href="#0" class="cd-read-more">Read more</a>-->
+				<a href="http://www.amnh.org/explore/amnh.tv/(watch)/the-titanosaur/how-to-build-a-titanosaur" class="cd-read-more"/>Click to learn more about building the titanosaur</a>
 				<span class="cd-date"> <img src="img/Installation.png" height="80%" width="100%"/></span>
-				</div> <!-- cd-timeline-content -->
+			</div> <!-- cd-timeline-content -->
 		</div> <!-- cd-timeline-block -->
 
 		<div class="cd-timeline-block">
 			<div class="cd-timeline-img cd-picture">
 				<img src="img/cd-icon-picture.svg" alt="Picture">
 			</div> <!-- cd-timeline-img -->
-
 		<div class="cd-timeline-content">
 				<h2> 57 Million Years Ago </h2>
-					<p> The first primates, Euprimates, existed. </p>
+					<p> The first primates, Euprimates, existed.</p>
 				<span class="cd-date"></span>
 			</div> <!-- cd-timeline-content -->
 		</div> <!-- cd-timeline-block -->
 
-	<div class="cd-timeline-block">
+		<div class="cd-timeline-block">
 			<div class="cd-timeline-img cd-picture">
 				<img src="img/cd-icon-picture.svg" alt="Picture">
 			</div> <!-- cd-timeline-img -->
-
-		<div class="cd-timeline-content">
+			<div class="cd-timeline-content">
 				<h2>6 to 7 million years ago </a></h2>
 				<p> First member of human family, Hominidae, existed.</p>
 				<a href="http://www.amnh.org/exhibitions/permanent-exhibitions/human-origins-and-cultural-halls/anne-and-bernard-spitzer-hall-of-human-origins/understanding-our-past/our-family-tree" class="cd-read-more">Click to learn more about the human family tree</a>
 				<br> <br> <br> </p>
-				<p style="font-size: 14px;">Show me the <a href="http://www.amnh.org/plan-your-visit/interactive-floor-plan/(open)/16988">Spitzer Hall of Human Origins on the first floor</a> so I can learn more about human ancentry!</p>
-
+				<p style="font-size: 14px;">Show me the <a href="http://www.amnh.org/plan-your-visit/interactive-floor-plan/(open)/16988"/>Spitzer Hall of Human Origins on the first floor</a> so I can learn more about human ancentry!</p>
 				<span class="cd-date"><img src="img/hominidae.jpg"</span>
 			</div> <!-- cd-timeline-content -->
 		</div> <!-- cd-timeline-block -->
@@ -355,15 +339,14 @@
 			<div class="cd-timeline-img cd-picture">
 				<img src="img/cd-icon-picture.svg" alt="Picture">
 			</div> <!-- cd-timeline-img -->
-
 		<div class="cd-timeline-content">
 				<h2> 150,000 years ago</h2>
 				<p> Homo sapiens sapiens evolved.</p>
 				<a href="http://www.amnh.org/explore/news-blogs/podcasts/podcast-masters-of-the-planet-with-ian-tattersall" class="cd-read-more"
-				<!--<a href="#0" class="cd-read-more">Click to learn more about Homo Sapiens</a>
-				<br> <br> <br> </p>
+				<a href="#0" class="cd-read-more">Click to learn more about Homo Sapiens</a>
+				<br> <br> <br>
 				<p style="font-size:14px">Visit the <a href="http://www.amnh.org/plan-your-visit/interactive-floor-plan/(open)/16988">Spitzer Hall of Human Origins on the first floor</a> to learn more about Homo Sapiens</p>
-				<span class="cd-date"><img src="img/homosapiens.jpg" alt="Picture" height="80%" width="100%"></span>
+				<span class="cd-date"><img src="img/homosapiens.jpg" alt="Picture" height="80%" width="100%"/></span>
 			</div> <!-- cd-timeline-content -->
 		</div> <!-- cd-timeline-block -->
 
@@ -387,7 +370,6 @@
 			<div class="cd-timeline-img cd-picture">
 				<img src="img/cd-icon-picture.svg" alt="Picture">
 			</div> <!-- cd-timeline-img -->
-	
 			<div class="cd-timeline-content">
 				<h2>1821-22</a></h2>
 				<p> Mary Anning discovers the world's first Plesiosaur skeleton at Lyme. </p>
@@ -395,27 +377,25 @@
 				<span class="cd-date"><img src="img/maryanning.jpg" alt="Picture" height="80%" width="100%"/></span>
 			</div> <!-- cd-timeline-content -->
 		</div> <!-- cd-timeline-block -->
+		
 		<div class="cd-timeline-block">
 			<div class="cd-timeline-img cd-picture">
 				<img src="img/cd-icon-picture.svg" alt="Picture">
-			</div> <!-- cd-timeline-img -->
-
-		<div class="cd-timeline-content">
-				<h2>1974</a></h2>
+			</div><!-- cd-timeline-img -->
+			<div class="cd-timeline-content">
+				<h2>1974</h2>
 				<p> Discovery of Lucy. </p>
 				<a href="http://www.amnh.org/exhibitions/permanent-exhibitions/human-origins-and-cultural-halls/anne-and-bernard-spitzer-hall-of-human-origins/lucy"class="cd-read-more">Click here to learn more about Lucy</a>
-				<br> <br> <br> </p>
-				<p style="font-size:14px;">Visit Lucy at the <a href="http://www.amnh.org/plan-your-visit/interactive-floor-plan/(open)/16988">Anne and Bernard Spitzer Hall of Human Origins on the first floor.</p>
+				<br> <br> <br>
+				<p style="font-size:14px;">Visit Lucy at the <a href="http://www.amnh.org/plan-your-visit/interactive-floor-plan/(open)/16988"/>Anne and Bernard Spitzer Hall of Human Origins on the first floor.</p>
 				<span class="cd-date"><img src="img/lucy.jpg" alt="Picture" height="80%" width="100%"/></span>
 			</div> <!-- cd-timeline-content -->
 		</div> <!-- cd-timeline-block -->
 
-
 		<div class="cd-timeline-block">
 			<div class="cd-timeline-img cd-picture">
 				<img src="img/cd-icon-picture.svg" alt="Picture">
 			</div> <!-- cd-timeline-img -->
-	
 			<div class="cd-timeline-content">
 				<h2>1996</a></h2>
 				<p> Discovery of Sinornithosaurus. </p>
@@ -424,11 +404,10 @@
 			</div> <!-- cd-timeline-content -->
 		</div> <!-- cd-timeline-block -->
 
-	<div class="cd-timeline-block">
+		<div class="cd-timeline-block">
 			<div class="cd-timeline-img cd-picture">
 				<img src="img/cd-icon-picture.svg" alt="Picture">
 			</div> <!-- cd-timeline-img -->
-	
 			<div class="cd-timeline-content">
 				<h2>2004 </h2>
 				<p> Discovery of Tiktaalik - A transitional form between lobe-finned fish and tetrapods is discovered in Canada. </p>
@@ -436,17 +415,16 @@
 			</div> <!-- cd-timeline-content -->
 		</div> <!-- cd-timeline-block -->
 
-	<div class="cd-timeline-block">
+		<div class="cd-timeline-block">
 			<div class="cd-timeline-img cd-picture">
 				<img src="img/cd-icon-picture.svg" alt="Picture">
 			</div> <!-- cd-timeline-img -->
-
 			<div class="cd-timeline-content">
 				<h2> Spring 2014 </h2>
 				<p> The Titanosaur femur was discovered.</p>
 				<a href="http://www.amnh.org/explore/amnh.tv/(watch)/the-titanosaur/meet-the-titanosaur" class="cd-read-more">Click here to Meet the Titanosaur</a>
-				<br> <br> <br> </p>
-				<p style="font-size:14px;">Come learn about the Titanosaur <a href="http://www.amnh.org/plan-your-visit/interactive-floor-plan/(open)/17020">Wallach Orientation Center on the 4th floor.</p><!-- <span class="cd-date">date</span>-->
+				<br> <br> <br>
+				<p style="font-size:14px;">Come learn about the Titanosaur <a href="http://www.amnh.org/plan-your-visit/interactive-floor-plan/(open)/17020"/>Wallach Orientation Center on the 4th floor.</p>
 			</div> <!-- cd-timeline-content -->
 		</div> <!-- cd-timeline-block -->
 
@@ -455,11 +433,10 @@
 			<div class="cd-timeline-img cd-picture">
 				<img src="img/cd-icon-picture.svg" alt="Picture">
 			</div> <!-- cd-timeline-img -->
-	
 			<div class="cd-timeline-content">
 				<h2>Jan 2016 </a></h2>
 				<p> Titanosaur arrived at AMNH.</p>
-				<a href="http://www.amnh.org/explore/news-blogs/news-posts/the-titanosaur-arrives" class="cd-read-more">Read more</a>
+				<a href="http://www.amnh.org/explore/news-blogs/news-posts/the-titanosaur-arrives" class="cd-read-more"/>Read more</a>
 				<!--<span class="cd-date">--><!--date--><!--</span> -->
 			</div> <!-- cd-timeline-content -->
 		</div> <!-- cd-timeline-block -->
