--- a/TitanosaurTimeline/index.html
+++ b/TitanosaurTimeline/index.html
@@ -197,7 +197,7 @@
 
 			<div class="cd-timeline-content" id="dino">
 				<h2>Nesting</h2>
-				<p> Female titanosaurs dug holes with their hind legs and laid about 30 to 40 eggs per hole. The fertilized eggs were about 11 cm long in diameter and had bead-like scales on their skin protecting them from predators. Titanosaurs laid their eggs near active volcanoes because the added heat helped with incubation. </p>
+				<p> Female Titanosaurs dug holes with their hind legs and laid about 30 to 40 eggs per hole. The fertilized eggs were about 11 cm long in diameter and had bead-like scales on their skin protecting them from predators. Titanosaurs laid their eggs near active volcanoes because the added heat helped with incubation. </p>
 				<!--<a href="#0" class="cd-read-more">Read more</a>-->
 				</div> <!-- cd-timeline-content -->
 		</div> <!-- cd-timeline-block -->
@@ -210,7 +210,7 @@
 
 			<div class="cd-timeline-content" id="dino">
 				<h2>Location and Time Period</h2>
-				<p> The titanosaur (sauropods group) existed 100 to 66 million years ago during the Cretaceous era. Titanosaur fossils have been found on every continent. 
+				<p> The Titanosaur (sauropods group) existed 100 to 66 million years ago during the Cretaceous era. Titanosaur fossils have been found on every continent. 
 				<!--<a href="#0" class="cd-read-more">Read more</a>-->
 				
 				</div> <!-- cd-timeline-content -->
@@ -238,7 +238,7 @@
 
 			<div class="cd-timeline-content" id="dino">
 				<h2>Physicality</h2>
-				<p> The titanosaur’s femur was 8 feet long, the largest ever found. Scientists first noted  its uniqueness because the lower end of the femur was straight as opposed to flared like that of other dinosaurs. The swing of their tail helped impulse their legs to walk and counteracted their heavy neck. The titanosaur was 20 feet tall from the ground up to its shoulder and over 3 times the size of a school bus. It weighed approximately 70 tons and evolved to walk on horseshoe-like stumps to reduce the impact walking had on the bones.</p> 
+				<p> The Titanosaur’s femur was 8 feet long, the largest ever found. Scientists first noted  its uniqueness because the lower end of the femur was straight as opposed to flared like that of other dinosaurs. The swing of their tail helped impulse their legs to walk and counteracted their heavy neck. The Titanosaur was 20 feet tall from the ground up to its shoulder and over 3 times the size of a school bus. It weighed approximately 70 tons and evolved to walk on horseshoe-like stumps to reduce the impact walking had on the bones.</p> 
 				<!--<a href="#0" class="cd-read-more">Read more</a>-->
 				<span class="cd-date"><!--date--></span>
 				</div> <!-- cd-timeline-content -->
@@ -252,7 +252,7 @@
 
 			<div class="cd-timeline-content" id="dino">
 				<h2>Theories Over Death</h2>
-				<p> The average titanosaur’s lifespan was 50 years. The first theory over their extinction was that because young males were usually isolated from herds at birth, they often died at a young age, leading to females not being able to reproduce. The second theory is that because there were active volcanoes in the area, titanosaurs laid their eggs in the area because of the heat the volcanoes emitted. However, when the volcanos erupted, it eradicated all vegetation, starving the, and eventually killing them.
+				<p> The average Titanosaur’s lifespan was 50 years. The first theory over their extinction was that because young males were usually isolated from herds at birth, they often died at a young age, leading to females not being able to reproduce. The second theory is that because there were active volcanoes in the area, Titanosaurs laid their eggs in the area because of the heat the volcanoes emitted. However, when the volcanos erupted, it eradicated all vegetation, starving the, and eventually killing them.
  </p>
 				<!--<a href="#0" class="cd-read-more">Read more</a>-->
 				<span class="cd-date"><!--date--></span>
@@ -267,7 +267,7 @@
 
 			<div class="cd-timeline-content" id="dino">
 				<h2>Negative Aspect of Its Size</h2>
-				<p> The titanosaur’s large size made the flow of blood and oxygen from the heart and brain  to the rest of the body slower and harder. Its massive size and weight made the titanosaurs move slower because it took longer for nerve signals to reach the brain.
+				<p> The Titanosaur’s large size made the flow of blood and oxygen from the heart and brain  to the rest of the body slower and harder. Its massive size and weight made the Titanosaurs move slower because it took longer for nerve signals to reach the brain.
 
  </p>
 				<!--<a href="#0" class="cd-read-more">Read more</a>-->
@@ -283,7 +283,7 @@
 
 			<div class="cd-timeline-content" id="dino">
 				<h2>Positive Aspect of Its Size</h2>
-				<p> The titanosaur’s large size deterred any potential predators from attacking. Its long neck allowed it to have greater access to vegetation in tall trees.
+				<p> The Titanosaur’s large size deterred any potential predators from attacking. Its long neck allowed it to have greater access to vegetation in tall trees.
  </p>
 				<!--<a href="#0" class="cd-read-more">Read more</a>-->
 				<span class="cd-date"><!--date--></span>
@@ -300,7 +300,7 @@
 				<h2>Exhibit</h2>
 				<p> The exhibit at the Museum of Natural History was inaugurated in January of 2016 and is on exhibit on the fourth floor. The titanosaur is too big for its hall, therefore its head is poking out warmly welcoming guests to the hall. 
  				</p>
- 				<a href="http://www.amnh.org/explore/amnh.tv/(watch)/the-titanosaur/how-to-mount-a-titanosaur-in-ten-steps" class="cd-read-more">Click here to learn more about the titanosaur</a>
+ 				<a href="http://www.amnh.org/explore/amnh.tv/(watch)/the-titanosaur/how-to-mount-a-titanosaur-in-ten-steps" class="cd-read-more">Click here to learn more about the Titanosaur</a>
 				<!--<a href="#0" class="cd-read-more">Read more</a>-->
 				<span class="cd-date"><!--date--></span>
 				</div> <!-- cd-timeline-content -->
@@ -316,7 +316,7 @@
 				<h2>Additional Info</h2>
 				<p> It took scientists two weeks to put all of the casts together and get them ready for the exhibit. Over the two years it took to dig up the 223 bones, these paleontologists transformed the knowledge of dinosaurs.
  				</p>
- 				<a href="http://www.amnh.org/explore/amnh.tv/(watch)/the-titanosaur/how-to-build-a-titanosaur" class="cd-read-more">Click to learn more about building the titanosaur</a>
+ 				<a href="http://www.amnh.org/explore/amnh.tv/(watch)/the-titanosaur/how-to-build-a-titanosaur" class="cd-read-more">Click to learn more about building the Titanosaur</a>
 				<!--<a href="#0" class="cd-read-more">Read more</a>-->
 				<span class="cd-date"> <img src="img/Installation.png" height="80%" width="100%"/></span>
 				</div> <!-- cd-timeline-content -->
