--- a/TitanosaurTimeline/index.html
+++ b/TitanosaurTimeline/index.html
@@ -412,7 +412,6 @@
 				<h2>1821-22</a></h2>
 				<p> Mary Anning discovers the world's first Plesiosaur skeleton at Lyme. </p>
 				<a href="http://www.amnh.org/explore/news-blogs/on-exhibit-posts/happy-birthday-mary-anning" class="cd-read-more"> Click to learn more about Mary Anning</a>
-				<a href="http://www.amnh.org/explore/news-blogs/on-exhibit-posts/happy-birthday-mary-anning" class="cd-read-more"> Read more</a>
 				<span class="cd-date"><img src="img/maryanning.jpg" alt="Picture"></span>
 			</div> <!-- cd-timeline-content -->
 		</div> <!-- cd-timeline-block -->
@@ -426,6 +425,7 @@
 				<h2>1974</a></h2>
 				<p> Discovery of Lucy. </p>
 				<a href="http://www.amnh.org/exhibitions/permanent-exhibitions/human-origins-and-cultural-halls/anne-and-bernard-spitzer-hall-of-human-origins/lucy"class="cd-read-more">Click here to learn more about Lucy</a>
+				
 				<p style="font-size:14px;">Visit Lucy at the <a href="http://www.amnh.org/plan-your-visit/interactive-floor-plan/(open)/16988">Anne and Bernard Spitzer Hall of Human Origins on the first floor.</p>
 				<span class="cd-date"><img src="img/lucy.jpg" alt="Picture"/></span>
 			</div> <!-- cd-timeline-content -->
@@ -465,7 +465,6 @@
 				<h2> Spring 2014 </h2>
 				<p> The Titanosaur femur was discovered.</p>
 				<a href="http://www.amnh.org/explore/amnh.tv/(watch)/the-titanosaur/meet-the-titanosaur" class="cd-read-more">Click to learn more about the Titanosaur</a>
-				<br> <br> <br> </p>
 				<p style="font-size:14px;">Visit the Titanosaur at the  <a href="http://www.amnh.org/plan-your-visit/interactive-floor-plan/(open)/17020">Wallach Orientation Center on the 4th floor.</p>
 				<!-- <span class="cd-date">date</span>-->
 			</div> <!-- cd-timeline-content -->
@@ -478,7 +477,7 @@
 			</div> <!-- cd-timeline-img -->
 	
 			<div class="cd-timeline-content">
-				<h2>Jan 2016 </a></h2>
+				<h2>Jan 2016 </h2>
 				<p> Titanosaur arrived at AMNH.</p>
 				<a href="http://www.amnh.org/explore/news-blogs/news-posts/the-titanosaur-arrives" class="cd-read-more">Meet the Titanosaur!</a>
 				<!--<span class="cd-date">--><!--date--><!--</span> -->
