--- a/TitanosaurTimeline/index.html
+++ b/TitanosaurTimeline/index.html
@@ -203,18 +203,8 @@
 			</div> <!-- cd-timeline-img -->
 			<div class="cd-timeline-content" id="dino">
 				<h2>Location and Time Period</h2>
-<<<<<<< HEAD
-				<p> The titanosaur (sauropods group) existed 100 to 66 million years ago during the Cretaceous era. Titanosaur fossils have been found on every continent.</p>
-=======
-<<<<<<< HEAD
-				<p> The Titanosaur (sauropods group) existed 100 to 66 million years ago during the Cretaceous era. Titanosaur fossils have been found on every continent. 
-				<!--<a href="#0" class="cd-read-more">Read more</a>-->
-				
-=======
 				<p> The titanosaur (sauropods group) existed 100 to 66 million years ago during the Cretaceous era. Titanosaur fossils have been found on every continent. 
->>>>>>> origin/master
 				<!--<a href="#0" class="cd-read-more">Read more</a>-->	
->>>>>>> origin/master
 				</div> <!-- cd-timeline-content -->
 			</div> <!-- cd-timeline-block -->
 
@@ -248,12 +238,7 @@
 			</div> <!-- cd-timeline-img -->
 			<div class="cd-timeline-content" id="dino">
 				<h2>Theories Over Death</h2>
-<<<<<<< HEAD
-				<p> The average Titanosaur’s lifespan was 50 years. The first theory over their extinction was that because young males were usually isolated from herds at birth, they often died at a young age, leading to females not being able to reproduce. The second theory is that because there were active volcanoes in the area, Titanosaurs laid their eggs in the area because of the heat the volcanoes emitted. However, when the volcanos erupted, it eradicated all vegetation, starving the, and eventually killing them.
- </p>
-=======
 				<p> The average titanosaur’s lifespan was 50 years. The first theory over their extinction was that because young males were usually isolated from herds at birth, they often died at a young age, leading to females not being able to reproduce. The second theory is that because there were active volcanoes in the area, titanosaurs laid their eggs in the area because of the heat the volcanoes emitted. However, when the volcanos erupted, it eradicated all vegetation, starving the, and eventually killing them. </p>
->>>>>>> origin/master
 				<!--<a href="#0" class="cd-read-more">Read more</a>-->
 				<span class="cd-date"><!--date--></span>
 			</div> <!-- cd-timeline-content -->
@@ -265,15 +250,9 @@
 			</div> <!-- cd-timeline-img -->
 			<div class="cd-timeline-content" id="dino">
 				<h2>Negative Aspect of Its Size</h2>
-<<<<<<< HEAD
-				<p> The Titanosaur’s large size made the flow of blood and oxygen from the heart and brain  to the rest of the body slower and harder. Its massive size and weight made the Titanosaurs move slower because it took longer for nerve signals to reach the brain.
-
- </p>
-=======
-				<p> The titanosaur’s large size made the flow of blood and oxygen from the heart and brain  to the rest of the body slower and harder. Its massive size and weight made the titanosaurs move slower because it took longer for nerve signals to reach the brain.</p>
->>>>>>> origin/master
+				<p> The titanosaur’s large size made the flow of blood and oxygen from the heart and brain  to the rest of the body slower and harder. Its massive size and weight made the titanosaurs move slower because it took longer for nerve 
 				<!--<a href="#0" class="cd-read-more">Read more</a>-->
-				<!--<span class="cd-date"><!--date</span>-->
+				<!--<span class="cd-date"><!date</span>-->
 			</div> <!-- cd-timeline-content -->
 		</div> <!-- cd-timeline-block -->
 
@@ -283,12 +262,7 @@
 			</div> <!-- cd-timeline-img -->
 			<div class="cd-timeline-content" id="dino">
 				<h2>Positive Aspect of Its Size</h2>
-<<<<<<< HEAD
-				<p> The Titanosaur’s large size deterred any potential predators from attacking. Its long neck allowed it to have greater access to vegetation in tall trees.
- </p>
-=======
 				<p> The titanosaur’s large size deterred any potential predators from attacking. Its long neck allowed it to have greater access to vegetation in tall trees.</p>
->>>>>>> origin/master
 				<!--<a href="#0" class="cd-read-more">Read more</a>-->
 				<span class="cd-date"><!--date--></span>
 			</div> <!-- cd-timeline-content -->
@@ -300,43 +274,25 @@
 			</div> <!-- cd-timeline-img -->
 			<div class="cd-timeline-content" id="dino">
 				<h2>Exhibit</h2>
-<<<<<<< HEAD
-				<p> The exhibit at the Museum of Natural History was inaugurated in January of 2016 and is on exhibit on the fourth floor. The titanosaur is too big for its hall, therefore its head is poking out warmly welcoming guests to the hall. 
- 				</p>
- 				<a href="http://www.amnh.org/explore/amnh.tv/(watch)/the-titanosaur/how-to-mount-a-titanosaur-in-ten-steps" class="cd-read-more">Click here to learn more about the Titanosaur</a>
-				<!--<a href="#0" class="cd-read-more">Read more</a>-->
-=======
 				<p> The exhibit at the Museum of Natural History was inaugurated in January of 2016 and is on exhibit on the fourth floor. The titanosaur is too big for its hall, therefore its head is poking out warmly welcoming guests to the hall. </p>
  				<a href="http://www.amnh.org/explore/amnh.tv/(watch)/the-titanosaur/how-to-mount-a-titanosaur-in-ten-steps" class="cd-read-more">Click here to learn more about the titanosaur</a>
->>>>>>> origin/master
 				<span class="cd-date"><!--date--></span>
 			</div> <!-- cd-timeline-content -->
 		</div> <!-- cd-timeline-block -->
 
 		<div class="cd-timeline-block">
-			<div class="cd-timeline-img cd-picture">
-				<img src="img/cd-icon-picture.svg" alt="Picture">
+			<div class="cd-timeline-im6g cd-picture">
+				<img src="img/cd-icon-picture.svg" alt="Picture"
 			</div> <!-- cd-timeline-img -->
 			<div class="cd-timeline-block" id="dino">
+				
 				<h2>Additional Info</h2>
 				<p> It took scientists two weeks to put all of the casts together and get them ready for the exhibit. Over the two years it took to dig up the 223 bones, these paleontologists transformed the knowledge of dinosaurs.
  				</p>
-<<<<<<< HEAD
  				<a href="http://www.amnh.org/explore/amnh.tv/(watch)/the-titanosaur/how-to-build-a-titanosaur" class="cd-read-more"/>Click to learn more about building the titanosaur</a>
 				<span class="cd-date"> <img src="img/Installation.png"/></span>
 			</div> <!-- cd-timeline-content -->
-=======
-<<<<<<< HEAD
- 				<a href="http://www.amnh.org/explore/amnh.tv/(watch)/the-titanosaur/how-to-build-a-titanosaur" class="cd-read-more">Click to learn more about building the Titanosaur</a>
-				<!--<a href="#0" class="cd-read-more">Read more</a>-->
-				<span class="cd-date"> <img src="img/Installation.png" height="80%" width="100%"/></span>
-=======
- 				<a href="http://www.amnh.org/explore/amnh.tv/(watch)/the-titanosaur/how-to-build-a-titanosaur" class="cd-read-more">Click to learn more about building the titanosaur</a>
-				<span class="cd-date"> <img src="img/Installation.png"/></span>
->>>>>>> origin/master
 				</div> <!-- cd-timeline-content -->
->>>>>>> origin/master
-		</div> <!-- cd-timeline-block -->
 
 		<div class="cd-timeline-block">
 			<div class="cd-timeline-img cd-picture">
