--- a/TitanosaurTimeline/index.html
+++ b/TitanosaurTimeline/index.html
@@ -284,7 +284,7 @@
 			<div class="cd-timeline-im6g cd-picture">
 				<img src="img/cd-icon-picture.svg" alt="Picture"
 			</div> <!-- cd-timeline-img -->
-			<div class="cd-timeline-block" id="dino">
+			<div class="cd-timeline-content" id="dino">
 				
 				<h2>Additional Info</h2>
 				<p> It took scientists two weeks to put all of the casts together and get them ready for the exhibit. Over the two years it took to dig up the 223 bones, these paleontologists transformed the knowledge of dinosaurs.
