--- a/TitanosaurTimeline/index.html
+++ b/TitanosaurTimeline/index.html
@@ -104,7 +104,7 @@
 				<h2>220 to 66 Million Years Ago</h2>
 				<p> Pterosaurs Existed.</p>
 				<a href="http://www.amnh.org/explore/amnh.tv/(watch)/pterosaurs-explained/what-is-a-pterosaur" class="cd-read-more">What are Pterosaurs like?</a>	
-				<br> <br> <br>
+
 				<p style="font-size:14px;">Visit pterosaurs on the 4th floor in the <a href="http://www.amnh.org/plan-your-visit/interactive-floor-plan/(open)/17021"/>Hall of Vertebrate Origins</p>
 				<span class="cd-date"><img src ="img/pterosaur.png" alt="Picture"/></span>
 			</div> <!-- cd-timeline-content -->
@@ -292,7 +292,7 @@
  				<a href="http://www.amnh.org/explore/amnh.tv/(watch)/the-titanosaur/how-to-build-a-titanosaur" class="cd-read-more"/>Click to learn more about building the titanosaur</a>
 				<span class="cd-date"> <img src="img/Installation.png"/></span>
 			</div> <!-- cd-timeline-content -->
-				</div> <!-- cd-timeline-content -->
+		</div>
 
 		<div class="cd-timeline-block">
 			<div class="cd-timeline-img cd-picture">
@@ -415,13 +415,6 @@
 				<a href="http://www.amnh.org/explore/amnh.tv/(watch)/the-titanosaur/meet-the-titanosaur" class="cd-read-more">Click here to Meet the Titanosaur</a>
 				<br> <br> <br>
 				<p style="font-size:14px;">Come learn about the Titanosaur <a href="http://www.amnh.org/plan-your-visit/interactive-floor-plan/(open)/17020"/>Wallach Orientation Center on the 4th floor.</p>
-				<a href="http://www.amnh.org/explore/amnh.tv/(watch)/the-titanosaur/meet-the-titanosaur" class="cd-read-more">Click to learn more about the Titanosaur</a>
-<<<<<<< HEAD
-				<br> <br> <br> </p>
-				<p style="font-size:14px;">Visit the Titanosaur at the  <a href="http://www.amnh.org/plan-your-visit/interactive-floor-plan/(open)/17020"/>Wallach Orientation Center on the 4th floor.</p>
-=======
-				<p style="font-size:14px;">Visit the Titanosaur at the  <a href="http://www.amnh.org/plan-your-visit/interactive-floor-plan/(open)/17020">Wallach Orientation Center on the 4th floor.</p>
->>>>>>> origin/master
 				<!-- <span class="cd-date">date</span>-->
 			</div> <!-- cd-timeline-content -->
 		</div> <!-- cd-timeline-block -->
