--- a/TitanosaurTimeline/index.html
+++ b/TitanosaurTimeline/index.html
@@ -80,7 +80,7 @@
 				<h2> 245 to 240 Million Years Ago </h2>
 				<p> Nyasasaurus parringtoni, earliest known dinosaur to exist. </p>
 				<!--<a href="#0" class="cd-read-more">Read more</a>-->
-				<span class="cd-date"><img src="img/" alt="Picture"/></span>
+				<span class="cd-date"><img src="img/nyasasaurus.jpg" alt="Picture"/></span>
 			</div> <!-- cd-timeline-content -->
 		</div> <!-- cd-timeline-block -->
 
@@ -301,7 +301,7 @@
 			<div class="cd-timeline-content">
 				<h2> 57 Million Years Ago </h2>
 					<p> The first primates, Euprimates, existed.</p>
-				<!--<span class="cd-date"></span>-->
+				<span class="cd-date"> <img src="img/euprimate.jpg" alt="Picture"/></span>
 			</div> <!-- cd-timeline-content -->
 		</div> <!-- cd-timeline-block -->
 
@@ -372,7 +372,6 @@
 				<br> <br> <br>
 				<p style="font-size:14px;">Visit Lucy at the <a href="http://www.amnh.org/plan-your-visit/interactive-floor-plan/(open)/16988"/>Anne and Bernard Spitzer Hall of Human Origins on the first floor.</p>
 				<span class="cd-date"><img src="img/lucy.jpg" alt="Picture" height="80%" width="100%"/></span>
-				<br> <br> <br> 
 				
 				<span class="cd-date"><img src="img/lucy.jpg" alt="Picture"/></span>
 			</div> <!-- cd-timeline-content -->
@@ -397,6 +396,7 @@
 			<div class="cd-timeline-content">
 				<h2>2004 </h2>
 				<p> Discovery of Tiktaalik - A transitional form between lobe-finned fish and tetrapods is discovered in Canada. </p>
+				<span class="cd-date"> <img src="tiktaalik.jpg" alt="Picture"/></span>
 			</div> <!-- cd-timeline-content -->
 		</div> <!-- cd-timeline-block -->
 
@@ -410,14 +410,7 @@
 				<a href="http://www.amnh.org/explore/amnh.tv/(watch)/the-titanosaur/meet-the-titanosaur" class="cd-read-more">Click here to Meet the Titanosaur</a>
 				<br> <br> <br>
 				<p style="font-size:14px;">Come learn about the Titanosaur <a href="http://www.amnh.org/plan-your-visit/interactive-floor-plan/(open)/17020"/>Wallach Orientation Center on the 4th floor.</p>
-<<<<<<< HEAD
-=======
-				<a href="http://www.amnh.org/explore/amnh.tv/(watch)/the-titanosaur/meet-the-titanosaur" class="cd-read-more">Click to learn more about the Titanosaur</a>
-				<br> <br> <br>
-				<p style="font-size:14px;">Visit the Titanosaur at the  <a href="http://www.amnh.org/plan-your-visit/interactive-floor-plan/(open)/17020"/>Wallach Orientation Center on the 4th floor.</p>
-
->>>>>>> origin/master
-				<!-- <span class="cd-date">date</span>-->
+				<span class="cd-date"> <img src="img/titanosaurfemur.jpg" alt="Picture"/></span>
 			</div> <!-- cd-timeline-content -->
 		</div> <!-- cd-timeline-block -->
 
@@ -430,7 +423,7 @@
 				<h2>Jan 2016 </h2>
 				<p> Titanosaur arrived at AMNH.</p>
 				<a href="http://www.amnh.org/explore/news-blogs/news-posts/the-titanosaur-arrives" class="cd-read-more">Meet the Titanosaur!</a>
-				<!--<span class="cd-date">--><!--date--><!--</span> -->
+				<span class="cd-date"> <img src="titanosauramnh.jpg" alt="Picture"/></span>
 			</div> <!-- cd-timeline-content -->
 		</div> <!-- cd-timeline-block -->
 
