--- a/TitanosaurTimeline/index.html
+++ b/TitanosaurTimeline/index.html
@@ -411,7 +411,7 @@
 				<a href="http://www.amnh.org/explore/amnh.tv/(watch)/the-titanosaur/meet-the-titanosaur" class="cd-read-more">Click here to Meet the Titanosaur</a>
 				<br> <br> <br>
 				<p style="font-size:14px;">Come learn about the Titanosaur <a href="http://www.amnh.org/plan-your-visit/interactive-floor-plan/(open)/17020"/>Wallach Orientation Center on the 4th floor.</p>
-				<span class="cd-date"> <img src="img/titanosaurfemur.jpg" alt="Picture"/></span>
+				<span class="cd-date"> <img src="img/titanosaurfemer.jpg" alt="Picture"/></span>
 			</div> <!-- cd-timeline-content -->
 		</div> <!-- cd-timeline-block -->
 
@@ -424,7 +424,7 @@
 				<h2>Jan 2016 </h2>
 				<p> Titanosaur arrived at AMNH.</p>
 				<a href="http://www.amnh.org/explore/news-blogs/news-posts/the-titanosaur-arrives" class="cd-read-more">Meet the Titanosaur!</a>
-				<span class="cd-date"> <img src="titanosauramnh.jpg" alt="Picture"/></span>
+				<span class="cd-date"> <img src="img/titanosauramnh.jpg" alt="Picture"/></span>
 			</div> <!-- cd-timeline-content -->
 		</div> <!-- cd-timeline-block -->
 
