--- a/TitanosaurTimeline/index.html
+++ b/TitanosaurTimeline/index.html
@@ -407,7 +407,7 @@
 			<div class="cd-timeline-content">
 				<h2>2004 </h2>
 				<p> Discovery of Tiktaalik - A transitional form between lobe-finned fish and tetrapods is discovered in Canada. </p>
-				<span class="cd-date"> <img src="tiktaalik.jpg" alt="Picture"/></span>
+				<span class="cd-date"> <img src="img/tiktaalik.jpg" alt="Picture"/></span>
 			</div> <!-- cd-timeline-content -->
 		</div> <!-- cd-timeline-block -->
 
