--- a/TitanosaurTimeline/index.html
+++ b/TitanosaurTimeline/index.html
@@ -230,7 +230,7 @@
 				<h2>Physicality</h2>
 				<p> The Titanosaur’s femur was 8 feet long, the largest ever found. Scientists first noted  its uniqueness because the lower end of the femur was straight as opposed to flared like that of other dinosaurs. The swing of their tail helped impulse their legs to walk and counteracted their heavy neck. The Titanosaur was 20 feet tall from the ground up to its shoulder and over 3 times the size of a school bus. It weighed approximately 70 tons and evolved to walk on horseshoe-like stumps to reduce the impact walking had on the bones.</p> 
 				<!--<a href="#0" class="cd-read-more">Read more</a>-->
-				<span class="cd-date"><!--date--></span>
+				<!-- <span class="cd-date"><!--date</span> -->
 			</div> <!-- cd-timeline-content -->
 		</div> <!-- cd-timeline-block -->
 
@@ -242,7 +242,7 @@
 				<h2>Theories Over Death</h2>
 				<p> The average titanosaur’s lifespan was 50 years. The first theory over their extinction was that because young males were usually isolated from herds at birth, they often died at a young age, leading to females not being able to reproduce. The second theory is that because there were active volcanoes in the area, titanosaurs laid their eggs in the area because of the heat the volcanoes emitted. However, when the volcanos erupted, it eradicated all vegetation, starving the, and eventually killing them. </p>
 				<!--<a href="#0" class="cd-read-more">Read more</a>-->
-				<span class="cd-date"><!--date--></span>
+				<!-- <span class="cd-date"><!--date</span> -->
 			</div> <!-- cd-timeline-content -->
 		</div> <!-- cd-timeline-block -->
 
@@ -266,7 +266,7 @@
 				<h2>Positive Aspect of Its Size</h2>
 				<p> The titanosaur’s large size deterred any potential predators from attacking. Its long neck allowed it to have greater access to vegetation in tall trees.</p>
 				<!--<a href="#0" class="cd-read-more">Read more</a>-->
-				<span class="cd-date"><!--date--></span>
+				<!-- <span class="cd-date"><!--date</span> -->
 			</div> <!-- cd-timeline-content -->
 		</div> <!-- cd-timeline-block -->
 
@@ -278,7 +278,7 @@
 				<h2>Exhibit</h2>
 				<p> The exhibit at the Museum of Natural History was inaugurated in January of 2016 and is on exhibit on the fourth floor. The titanosaur is too big for its hall, therefore its head is poking out warmly welcoming guests to the hall. </p>
  				<a href="http://www.amnh.org/explore/amnh.tv/(watch)/the-titanosaur/how-to-mount-a-titanosaur-in-ten-steps" class="cd-read-more">Click here to learn more about the titanosaur</a>
-				<span class="cd-date"><!--date--></span>
+				<!-- <span class="cd-date"><!--date</span> -->
 			</div> <!-- cd-timeline-content -->
 		</div> <!-- cd-timeline-block -->
 
@@ -373,8 +373,6 @@
 				<a href="http://www.amnh.org/exhibitions/permanent-exhibitions/human-origins-and-cultural-halls/anne-and-bernard-spitzer-hall-of-human-origins/lucy"class="cd-read-more">Click here to learn more about Lucy</a>
 				<br> <br> <br>
 				<p style="font-size:14px;">Visit Lucy at the <a href="http://www.amnh.org/plan-your-visit/interactive-floor-plan/(open)/16988"/>Anne and Bernard Spitzer Hall of Human Origins on the first floor.</p>
-				<span class="cd-date"><img src="img/lucy.jpg" alt="Picture" height="80%" width="100%"/></span>
-				
 				<span class="cd-date"><img src="img/lucy.jpg" alt="Picture"/></span>
 			</div> <!-- cd-timeline-content -->
 		</div> <!-- cd-timeline-block -->
