--- a/TitanosaurTimeline/index.html
+++ b/TitanosaurTimeline/index.html
@@ -35,7 +35,7 @@
     <td><a href="#one" class="hrefs">Back to Top</a></td>
     <td><a href="#two" class="hrefs">&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;A Titanosaur?</a></td>
     <td><a href="#three" class="hrefs">AMNH's Tree!</a></td>
-    <td><a href="aboutus.html" style="color: #3399FF; font-size:20px">About us</a>
+    <td><a href="aboutus.html" style="color: #FFCC66; font-size:20px">About us</a>
 </tr>
 </table>
 </span>
