--- a/TitanosaurTimeline/index.html
+++ b/TitanosaurTimeline/index.html
@@ -283,7 +283,7 @@
 		</div> <!-- cd-timeline-block -->
 
 		<div class="cd-timeline-block">
-			<div class="cd-timeline-im6g cd-picture">
+			<div class="cd-timeline-img cd-picture">
 				<img src="img/cd-icon-picture.svg" alt="Picture"
 			</div> <!-- cd-timeline-img -->
 			<div class="cd-timeline-content" id="dino">
