--- a/TitanosaurTimeline/index.html
+++ b/TitanosaurTimeline/index.html
@@ -284,7 +284,7 @@
 
 		<div class="cd-timeline-block">
 			<div class="cd-timeline-img cd-picture">
-				<img src="img/cd-icon-picture.svg" alt="Picture"
+				<img src="img/cd-icon-picture.svg" alt="Picture">
 			</div> <!-- cd-timeline-img -->
 			<div class="cd-timeline-content" id="dino">
 				
