--- a/TitanosaurTimeline/index.html
+++ b/TitanosaurTimeline/index.html
@@ -45,7 +45,7 @@
 		<h1>Titanosaur Timeline</h1>
 	</header><br></br>
 	<center><p>This website is a cohesive timeline of events centered around the Titanosaur.<br></br>
-		The beige color difference for the boxes note the main Titanosaur facts. The information provides  links to AMNH.</p></center>
+		The beige color difference in the boxes notes the main Titanosaur facts. The information provides  links to AMNH.</p></center>
 
 <section id="cd-timeline" class="cd-container">
 
